force-app/main/default/objects/Revamp_Project__c/Revamp_Project__c.object-meta.xml
<CustomObject>
    <description>Custom Object built to house and track the User Stories for the Revamp Project - both the foundation/clean up and enhancement phases.</description>
    <label>Revamp Project</label>
    <nameField>
        <displayFormat>S-{0000000}</displayFormat>
        <label>Revamp Project Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revamp Project</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>