force-app/main/default/objects/Revamp_Project__c/fields/GS_User_Story__c.field-meta.xml
<CustomField>
    <fullName>GS_User_Story__c</fullName>
    <label>GS User Story #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>