force-app/main/default/objects/Revamp_Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GS_User_Story__c</columns>
    <columns>Phase__c</columns>
    <columns>Title__c</columns>
    <columns>Points__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>