force-app/main/default/objects/Revamp_Project__c/listViews/Foundation.listView-meta.xml
<ListView>
    <fullName>Foundation</fullName>
    <columns>NAME</columns>
    <columns>GS_User_Story__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Points__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Title__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Phase__c</field>
        <operation>equals</operation>
        <value>Foundation</value>
    </filters>
    <label>Foundation</label>
</ListView>